--- a/paper/submission/memo.qmd
+++ b/paper/submission/memo.qmd
@@ -56,4 +56,14 @@ We further accepted R2's suggestion to revis the summary of the empirical findin
 We adopted R1's suggestion to move the discussion of data cleaning automation to Appendix XXX and provided more details about what the software helps in the data collection and janitor processes.
 
 
+**Syntax and framing**.
+We appreciate the reviewers' careful reading and framing suggestions. 
+Following them, we reorganized the introduction into three paragraphs to address the relevance of Macrointerest, the challenges faced by previous research, and the specific contribution and findings.
+We also corrected the syntax errors and framing unclarity as pointed out by the reviewers.
+
+In the appendix, we added more information of the source surveys in order to give credit to data creators and enhance data-collection transparency (Appendix XXXX).
+R2 suggested that Figure A1 is hard to read. 
+We split it into several smaller panels according to the continents of the involved countries. 
+We also presented the full, numeric result of the primary analysis as requested.
+
 # Reference {-}
