address the representation issue, fixed #10; addressed in the memor #1

--- a/paper/dcpo-macrointerest.bib
+++ b/paper/dcpo-macrointerest.bib
@@ -114,6 +114,24 @@
   file = {D:\zotero_system\storage\BWH8ZK9W\Caughey et al2019_Policy ideology in european mass publics, 1981–2016.pdf}
 }
 
+@article{CaugheyWarshaw2015,
+  ids = {CaugheyWarshaw2015a},
+  title = {Dynamic Estimation of Latent Opinion Using a Hierarchical Group-Level {{IRT}} Model},
+  author = {Caughey, Devin and Warshaw, Christopher},
+  year = {2015},
+  journal = {Political Analysis},
+  volume = {23},
+  number = {2},
+  pages = {197--211},
+  issn = {1047-1987, 1476-4989},
+  doi = {10.1093/pan/mpu021},
+  abstract = {Over the past eight decades, millions of people have been surveyed on their political opinions. Until recently, however, polls rarely included enough questions in a given domain to apply scaling techniques such as IRT models at the individual level, preventing scholars from taking full advantage of historical survey data. To address this problem, we develop a Bayesian group-level IRT approach that models latent traits at the level of demographic and/or geographic groups rather than individuals. We use a hierarchical model to borrow strength cross-sectionally and dynamic linear models to do so across time. The group-level estimates can be weighted to generate estimates for geographic units. This framework opens up vast new areas of research on historical public opinion, especially at the subnational level. We illustrate this potential by estimating the average policy liberalism of citizens in each U.S. state in each year between 1972 and 2012.},
+  langid = {english},
+  keywords = {IRT},
+  timestamp = {2020-06-24T02:49:03Z},
+  file = {D:\zotero_system\storage\Q9NBNID7\Caughey_Warshaw2015_Dynamic estimation of latent opinion using a hierarchical group-level IRT model.pdf}
+}
+
 @article{CaugheyWarshaw2018a,
   title = {Policy Preferences and Policy Change: Dynamic Responsiveness in the American States, 1936{\textendash}2014},
   shorttitle = {Policy Preferences and Policy Change},
