address the validation issue #11; addressed in the memo #1

--- a/paper/dcpo-macrointerest.bib
+++ b/paper/dcpo-macrointerest.bib
@@ -568,3 +568,23 @@
   langid = {english},
   file = {D:\zotero_system\storage\GEDA4WNZ\Tai et al2022_Democracy, Public Support, and Measurement Uncertainty.pdf}
 }
+
+@article{WooEtAl2023,
+  title = {Public {{Gender Egalitarianism}}: {{A Dataset}} of {{Dynamic Comparative Public Opinion}} toward {{Egalitarian Gender Roles}} in the {{Public Sphere}}},
+  shorttitle = {Public {{Gender Egalitarianism}}},
+  author = {Woo, Byung-Deuk and Goldberg, Lindsey A. and Solt, Frederick},
+  year = {2023},
+  month = apr,
+  journal = {British Journal of Political Science},
+  volume = {53},
+  number = {2},
+  pages = {766--775},
+  publisher = {{Cambridge University Press}},
+  issn = {0007-1234, 1469-2112},
+  doi = {10.1017/S0007123422000436},
+  urldate = {2023-11-28},
+  abstract = {Societal attitudes toward gender roles in the workplace and politics play a central part in theorizing on the difficulty women face in achieving political equality, but shortcomings in the available data have prevented direct examination of many implications of these theories. Drawing on recent advances in latent-variable modeling of public opinion and a comprehensive collection of survey data, we present the Public Gender Egalitarianism dataset to address this need: comparable estimates of the public's attitudes on gender equality in the public sphere across more than one hundred countries over time. These Public Gender Egalitarianism scores are strongly correlated with responses to individual survey items and with women's rates of participation in the labor force and corporate boards. We expect that the Public Gender Egalitarianism data will become an invaluable source for broadly cross-national and longitudinal research on the causes and consequences of collective attitudes toward gender equality in politics and the economy.},
+  langid = {english},
+  keywords = {Comparative Politics,gender inequality,gender roles,measurement,political culture,Political Science,public opinion,Social and Behavioral Sciences},
+  file = {D\:\\zotero_system\\storage\\UVPBX2CM\\Woo et al2022_Public gender egalitarianism.pdf;D\:\\zotero_system\\storage\\W68Q5TRT\\Woo et al2023_Public Gender Egalitarianism.pdf}
+}
